crates/forgejo-core/src/error/snapshots/forgejo_core__error__classify__tests__snapshot_404_post_to_a_collection_names_the_real_reason.snap
---
source: crates/forgejo-core/src/error/classify.rs
expression: "rendered(404, &json(),\nbr#\"[\"could not find 'no-such-branch' to be a commit, branch or tag, or the branch does not exist\"]\"#,\n&create_pull_ctx())"
---
error: referenced resource not found in perf3ct/fcli (HTTP 404)

  request:     POST /api/v1/repos/perf3ct/fcli/pulls
  repository:  perf3ct/fcli  (found)
  server says: could not find 'no-such-branch' to be a commit, branch or tag, or the branch does not exist

what to do:
  this request has no pull request identifier. Check referenced branch, tag, or
  user names.
  1. correct the value named in the server message, then retry
  2. fcli api repos/perf3ct/fcli/branches --jq '.[].name'
  3. fcli api repos/perf3ct/fcli/tags --jq '.[].name'
  note: when creating a pull request, check --head and --base.
