crates/forgejo-core/src/error/snapshots/forgejo_core__error__classify__tests__snapshot_422_errors_array.snap
---
source: crates/forgejo-core/src/error/classify.rs
expression: "rendered(422, &json(),\nbr#\"{\"errors\":[\"title is empty\",\"body is longer than 65535 characters\"]}\"#,\n&ctx())"
---
error: the server rejected the values in this request (HTTP 422)

  request:     GET /api/v1/repos/perf3ct/fcli/pulls/4212
  server says: title is empty; body is longer than 65535 characters

what to do:
  correct the rejected values listed above.
  1. correct the values and retry
  2. fcli raw search issue  (find the endpoint and its flags)
  note: the server may require a field that the API specification marks
        optional.
