crates/forgejo-core/src/error/snapshots/forgejo_core__error__classify__tests__snapshot_422_field_map.snap
---
source: crates/forgejo-core/src/error/classify.rs
expression: "rendered(422, &json(),\nbr#\"{\"title\":[\"can't be blank\"],\"assignees\":[\"user does not exist [name: nope]\"]}\"#,\n&ctx())"
---
error: the server rejected the values in this request (HTTP 422)

  request:   GET /api/v1/repos/perf3ct/fjo/pulls/4212
  title:     can't be blank
  assignees: user does not exist [name: nope]

what to do:
  correct the rejected values listed above.
  1. correct the values and retry
  2. fjo raw search issue  (find the endpoint and its flags)
  note: the server may require a field that the API specification marks
        optional.
